# deep-agents

./: .env.sample  .gitignore  README.md  pyproject.toml
src/: deep_agent.py  deep_agent_with_abstraction.py  prompts.py  state.py  utils.py
src/tools/: delegate_task.py  file_sys.py  research.py  todo.py
