[project]
name = "deep-agents"
version = "0.1.0"
description = "Langchain deep agents"
requires-python = ">=3.11, <3.14"
dependencies = [
    "langgraph>=1.0.10",
    "langchain>=1.2.10",
    "langchain-openai>=1.1.10",
    "langchain-anthropic>=1.3.4",
    "langchain-community>=0.4.1",
    "langchain-tavily>=0.2.17",
    "langchain-mcp-adapters>=0.2.1",
    "pydantic>=2.12.5",
    "rich>=14.3.3",
    "tavily-python>=0.7.22",
    "httpx>=0.28.1",
    "markdownify>=1.2.2",
    "deepagents>=0.4.4",
    "python-dotenv>=1.1.0",
]

[project.optional-dependencies]
dev = ["mypy>=1.19.1", "ruff>=0.15.4"]

[project.scripts]
deep-agent = "src.deep_agent:main"
deep-agent-abstracted = "src.deep_agent_with_abstraction:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
